增加睿视功能选项

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -988,4 +988,7 @@
   <string name="web">http://www.jfgou.com</string>
   <string name="wifi_authentication">正在验证%s连接</string>
   <string name="wifi_hasnot">未找到此WiFi网络</string>
+  <string name="IP_Address">IP地址</string>
+  <string name="WiredMode">有线模式</string>
+  <string name="EnableAP">开启热点</string>
 </resources>
