--- a/app/src/_cell_c/res/values-in-rID/strings.xml
+++ b/app/src/_cell_c/res/values-in-rID/strings.xml
@@ -2,6 +2,6 @@
 
 <resources>
   <string name="Slogan">Smart Home, for better life</string>
-  <string name="Tap1_Shared_Description">I made something cool by 720°Panoramic Cam,come &amp; see it!</string>
+  <string name="Tap1_Shared_Description">Saya buat sesuatu yang keren dengan 720°Panoramic Cam, datang &amp; melihatnya!</string>
   <string name="app_name">Cell_C</string>
 </resources>
