--- a/app/src/_cell_c/res/values-it/strings.xml
+++ b/app/src/_cell_c/res/values-it/strings.xml
@@ -2,6 +2,6 @@
 
 <resources>
   <string name="Slogan">Smart Home, for better life</string>
-  <string name="Tap1_Shared_Description">I made something cool by 720°Panoramic Cam,come &amp; see it!</string>
+  <string name="Tap1_Shared_Description">Ho fatto qualcosa di fico da 720°panoramica Cam, vieni e vedere!</string>
   <string name="app_name">Cell_C</string>
 </resources>
