--- a/app/src/_cell_c/res/values-zh-rTW/strings.xml
+++ b/app/src/_cell_c/res/values-zh-rTW/strings.xml
@@ -2,6 +2,6 @@
 
 <resources>
   <string name="Slogan">美好生活 智能家居</string>
-  <string name="Tap1_Shared_Description">我用720°全景摄像机拍摄了一段内容，快来看看吧</string>
+  <string name="Tap1_Shared_Description">我用720°全景攝像機拍攝了一段內容，快來看看吧</string>
   <string name="app_name">Cell_C</string>
 </resources>
