--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -550,8 +550,8 @@
   <string name="Sharing_Management">Teilen Management</string>
   <string name="Slogan">Homesick, Use Clever Dog</string>
   <string name="Slogan_Zhongxing">Smart Home, for better life</string>
-  <string name="Switch_Mode">Bitte wechseln Sie in den Outdoor&#8211;Modus, um den Aufnahmeinhalt anzuzeigen</string>
-  <string name="Switch_Mode_Pop">Bitte schalten Sie den aktuellen Netzwerk&#8211;Aufnahmeinhalt in den Außenmodus</string>
+  <string name="Switch_Mode">Bitte wechseln Sie zum direkten Modus, um den Aufnahmeinhalt anzuzeigen</string>
+  <string name="Switch_Mode_Pop">Bitte schalten Sie den aktuellen Netzwerkaufnahmemittel in den Direktmodus</string>
   <string name="TAKE_PHOTO">Foto aufnehmen</string>
   <string name="TERM_OF_USE">Nutzervereinbarung</string>
   <string name="THEME_DELETED">Ort %s gelöscht</string>
@@ -720,8 +720,8 @@
   <string name="Tap1_NewFirmware">Neue Firmware</string>
   <string name="Tap1_NoMessages">Keine Nachrichten</string>
   <string name="Tap1_Offline">Offline, bitte wieder anschließen>></string>
-  <string name="Tap1_OutdoorMode">Outdoor Modus</string>
-  <string name="Tap1_OutdoorMode_Opened">Outdoor&#8211;Modus geöffnet wurde</string>
+  <string name="Tap1_OutdoorMode">Direktmodus</string>
+  <string name="Tap1_OutdoorMode_Opened">Der Direktmodus wurde geöffnet</string>
   <string name="Tap1_Refreshed">Refreshed</string>
   <string name="Tap1_RefreshedFailed">Refresh failed</string>
   <string name="Tap1_SDCardFullyTips">Voll besetzt</string>
@@ -977,7 +977,6 @@
   <string name="sound_auth">Sound</string>
   <string name="submiting">Einen Moment bitte&#8230;</string>
   <string name="tencent_app_id">1103156296</string>
-  <string name="test_name">加菲狗|Clever Dog|doby|Doby</string>
   <string name="the_memory_card_is_not_present">keine Speicherkarte</string>
   <string name="turn_on_gps">Schalten Sie im Android Systemeinstellungen \"GPS\" Zugang</string>
   <string name="turn_on_storage">Für den normalen Gebrauch erlauben Sie bitte Ihre %s Speicher zugreifen</string>
