--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -550,8 +550,8 @@
   <string name="Sharing_Management">Manajemen berbagi</string>
   <string name="Slogan">Homesick, Use Clever Dog</string>
   <string name="Slogan_Zhongxing">Smart Home, for better life</string>
-  <string name="Switch_Mode">Silahkan beralih ke mode outdoor untuk melihat konten pemotretan</string>
-  <string name="Switch_Mode_Pop">Tolong aktifkan konten pemotretan jaringan ke mode luar ruangan</string>
+  <string name="Switch_Mode">Silahkan beralih ke mode langsung untuk melihat konten pemotretan</string>
+  <string name="Switch_Mode_Pop">Tolong aktifkan konten pemotretan jaringan ke mode langsung</string>
   <string name="TAKE_PHOTO">Ambil Foto</string>
   <string name="TERM_OF_USE">Syarat dan privasi</string>
   <string name="THEME_DELETED">%s sudah dihapus</string>
@@ -720,8 +720,8 @@
   <string name="Tap1_NewFirmware">Firmware baru</string>
   <string name="Tap1_NoMessages">Tidak ada pesan</string>
   <string name="Tap1_Offline">Offline, silakan berhubungan kembali>></string>
-  <string name="Tap1_OutdoorMode">Modus luar ruangan</string>
-  <string name="Tap1_OutdoorMode_Opened">Modus luar ruangan telah dibuka</string>
+  <string name="Tap1_OutdoorMode">Mode langsung</string>
+  <string name="Tap1_OutdoorMode_Opened">Mode langsung telah dibuka</string>
   <string name="Tap1_Refreshed">Refreshed</string>
   <string name="Tap1_RefreshedFailed">Refresh failed</string>
   <string name="Tap1_SDCardFullyTips">Terisi penuh</string>
@@ -977,7 +977,6 @@
   <string name="sound_auth">Suara</string>
   <string name="submiting">Sedang mengirim&#8230;</string>
   <string name="tencent_app_id">1103156296</string>
-  <string name="test_name">加菲狗|Clever Dog|doby|Doby</string>
   <string name="the_memory_card_is_not_present">Tidak ada SD Card</string>
   <string name="turn_on_gps">Silahkan ganti akses \"GPS\" di pengaturan sistem Android</string>
   <string name="turn_on_storage">Untuk pemakaian normal, izikan %s untuk akses penyimpanan anda</string>
