--- a/app/src/_doby/res/values/strings.xml
+++ b/app/src/_doby/res/values/strings.xml
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <resources>
-    <string name="app_name">Doby</string>
-    <string name="Slogan">Smart Home, for better life</string>
+  <string name="Slogan">Smart Home, for better life</string>
+  <string name="Tap1_Shared_Description">I made something cool by 720°Panoramic Cam,come &amp; see it!</string>
+  <string name="app_name">Doby</string>
 </resources>
